# iMessages-Chatbot-Server

./: README.md  SETUP.md  pyproject.toml
examples/: README.md
examples/hermes/imessage-presence/: HOOK.yaml  handler.py
examples/openclaw/imessage-presence/: HOOK.md  handler.ts
showcase/: README.md  package-lock.json  package.json  remotion.config.ts
showcase/src/: LaunchVideo.tsx  Root.tsx  index.css  theme.ts
showcase/src/components/: Atmosphere.tsx  IMessagePhone.tsx
src/: __init__.py  ai_client.py  config.py  message_sender.py  presence.py  presence_cli.py  server.py
tests/: test_hermes_presence_hook.py  test_presence.py
